--- a/_includes/bio-education-custom.html
+++ b/_includes/bio-education-custom.html
@@ -13,7 +13,7 @@
     <div class="twelve wide column no-bottom">
       <p class="ui no-bottom"><b>{{ entry.institution }}</b></p>
       <p class="ui no-bottom"><i>{{ entry.studyType }}, {{ entry.area }}</i></p>
-      <p class="ui no-bottom"><b>Cumulative: {{ entry.gpa }}</b></p>
+      <p class="ui no-bottom"><b>Cumulative GPA: {{ entry.gpa }}</b></p>
       <p class="ui no-bottom">Coursework:</p>
       {% if entry.courses %}
       <ul style="margin: 0px;">
